enum AccessibilityElement: String {
    case alertOKButton
    case loginButton
    case unsplashWebView
    case logoutButton
    case cellLikeButton
    case singleImage
    case singleImageBackButton
    case tableViewId
}
