...
    @preconcurrency
    func present(
        present: @MainActor (UIViewController, Bool, (() -> Void)?) -> Void,
        yesButtonAction: @escaping () -> Void
    ) {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )

        let yesButtonAction = UIAlertAction(
            title: "Да",
            style: .default
...
